--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles.css" type="text/css">
+  <script src="https://kit.fontawesome.com/c4efcb5b8c.js" crossorigin="anonymous"></script>
 
   <title>Microsoft Official Home Page</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <nav>
+    <a href="https://www.microsoft.com/">
+      <img 
+        src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31" 
+        alt="Microsoft Logo"
+        class="nav-img">
+    </a>
+
+    <div class="nav-links">
+      <div>
+        <a href="https://www.microsoft.com/pt-br/microsoft-365?rtc=1">Microsoft 365</a>
+        <a href="https://www.microsoft.com/microsoft-365/microsoft-office">Office</a>
+        <a href="https://www.microsoft.com/pt-br/windows/">Windows</a>
+        <a href="https://www.xbox.com/">Xbox</a>
+        <a href="https://support.microsoft.com/pt-br">Suporte</a>
+      </div>
+      <div>
+        <a href="">Toda a Microsoft <i class="fas fa-chevron-down"></i></a>
+        <a href="">Buscar <i class="fas fa-search" style="font-size: 16px;"></i></a>
+        <a href="https://www.microsoft.com/pt-br/store/cart">
+          Carrinho <i class="fas fa-shopping-cart" style="font-size: 16px;"></i>
+        </a>
+        <a href="https://www.microsoft.com/mscomhp/onerf/signin?EEL=True&pcexp=True&ru=https%3A%2F%2Fwww.microsoft.com%2Fpt-br">
+          Entrar <i class="far fa-user-circle" style="font-size: 30px;"></i>
+        </a>
+      </div>
+    </div>
+  </nav>
 </body>
 </html>
