--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
   <link rel="stylesheet" href="styles.css" type="text/css">
   <script src="https://kit.fontawesome.com/c4efcb5b8c.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="scripts.js"></script>
 
   <title>Microsoft Official Home Page</title>
 </head>
@@ -37,5 +38,51 @@
       </div>
     </div>
   </nav>
+
+  <section id="slider">
+    <button class="slider-btn" style="left: 5%;"><i class="fas fa-chevron-left"></i></button>
+    <button class="slider-btn" style="right: 5%;"><i class="fas fa-chevron-right"></i></button>
+    <div id="slide1">
+      <img 
+      src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4tt3U?ver=46b1&q=90&m=8&h=472&w=
+      1259&b=%23FFFFFFFF&l=f&x=0&y=194&s=2120&d=795&aim=true" 
+      alt="Microsoft Teams">
+  
+      <div class="slide1-content">
+        <h1>Microsoft Teams</h1>
+        <p>Converse, participe de reuniões, ligue e colabore</p>
+  
+        <a 
+          href="https://www.microsoft.com/pt-br/microsoft-365/microsoft-teams/group-chat-software?icid=mscom_marcom">
+          <span>Saiba Mais</span> <i class="fas fa-chevron-right"></i>
+        </a>
+      </div>
+    </div>
+    <div id="slide2">
+      <img 
+      src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4t3sw?ver=6a25&q=90&m=8&h=
+      472&w=1259&b=%23FFFFFFFF&l=f&x=0&y=171&s=2120&d=795&aim=true" 
+      alt="Microsoft Teams">
+  
+      <div class="slide2-content">
+        <h1>Este é o seu 365</h1>
+        <p>Descubra uma nova possibilidade a cada dia com o Microsoft 365</p>
+  
+        <a 
+          href="https://www.microsoft.com/pt-br/microsoft-365/p/microsoft-365-family/cfq7ttc0k5dm?icid=mscom_marcom
+          &activetab=pivot%3aoverviewtab"
+          class="link-black">
+          <span>Para até 6 pessoas</span> <i class="fas fa-chevron-right"></i>
+        </a>
+        <a 
+          href="https://www.microsoft.com/pt-br/microsoft-365/p/microsoft-365-personal/cfq7ttc0k5bf?icid=mscom_marcom
+          &activetab=pivot%3aoverviewtab"
+          class="link-transp">
+          <span>Para 1 pessoa</span> <i class="fas fa-chevron-right"></i>
+        </a>
+      </div>
+    </div>
+    
+  </section>
 </body>
 </html>
