--- a/index.html
+++ b/index.html
@@ -84,5 +84,34 @@
     </div>
     
   </section>
+
+  <section class="product-links">
+    <a href="https://www.microsoft.com/pt-br/microsoft-365/compare-all-microsoft-365-products?icid=MSCOM_QL_M365">
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4sQDc?ver=30c2&q=90&m
+      =6&h=40&w=40&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Microsoft 365">
+      Escolha seu <br> Microsoft 365
+    </a>
+    <a href="https://www.microsoft.com/pt-br/store/b/xbox?icid=MSCOM_QL_Xbox">
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4pxBu?ver=eae5&q=90&m=
+      6&h=40&w=40&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Xbox">
+      Comprar o Xbox
+    </a>
+    <a href="https://www.microsoft.com/pt-br/store/b/windows?icid=MSCOM_QL_Windows">
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4pkvE?ver=d8fc&q=90&m=
+      6&h=40&w=40&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Windows 10">
+      Comprar <br> Windows 10
+    </a>
+  </section>
+
+  <footer>
+    <a href=""><i class="fas fa-globe-americas"></i>Português (Brasil)</a>
+    <a href="">Entre em contato com a Microsoft</a>
+    <a href="">Política de Privacidade</a>
+    <a href="">Ética e Compliance</a>
+    <a href="">Nota Legal</a>
+    <a href="">Marcas</a>
+    <a href="">Sobre os nossos anúncios</a>
+    <a href="">©Microsoft 2020</a>
+  </footer>
 </body>
 </html>
