Added cards and slide section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,158 @@
     </a>
   </section>
 
-  <footer>
+  <section class="cards">
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4dUlg?ver=c684&q=90&m=6&h
+      =201&w=358&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Game Pass">
+      <h3>Xbox Game Pass Ultimate</h3>
+      <p>Xbox Live Gold e mais de 100 jogos para console e PC de alta qualidade. Jogue com amigos e descubra seu
+        próximo jogo favorito.
+      </p>
+      <a href="">Participe já <i class="fas fa-chevron-right"></i></a>
+    </div>
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1uWfh?ver=0868&q=90&m
+      =6&h=201&w=358&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Xbox One S">
+      <h3>Xbox One S</h3>
+      <p>O melhor sistema de jogos e entretenimento 4K.
+      </p>
+      <a href="">Saiba mais <i class="fas fa-chevron-right"></i></a>
+    </div>
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4rzE2?ver=aa0b&q=90&m=6&h
+      =201&w=358&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Microsoft Edge">
+      <h3>Conheça o novo Microsoft Edge</h3>
+      <p>Desempenho excepcional com mais privacidade, mais velocidade e mais qualidade durante a navegação.
+      </p>
+      <a href="">Baixe agora <i class="fas fa-chevron-right"></i></a>
+    </div>
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE37Bcs?ver=e981&q=90&m=6&h
+      =201&w=358&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Windows 10">
+      <h3>Atualização do Windows 10</h3>
+      <p>Estamos trazendo novos recursos para ajudá-lo a se dedicar às suas paixões, estabelecer melhores conexões e
+        poupar tempo.
+      </p>
+      <a href="">Saiba mais <i class="fas fa-chevron-right"></i></a>
+    </div>
+  </section>
+
+  <section class="slide-content">
+    <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE34Xur?ver=ab80&q=9
+    0&m=8&h=600&w=1600&b=%23FFFFFFFF&l=f&x=0&y=186&s=2120&d=795&aim=true" alt="Xbox Game Pass">
+
+    <div>
+      <h1>Xbox Game Pass para PC<br>(Beta)</h1>
+
+      <p>Descubra seu próximo jogo favorito. Com jogos adicionados o tempo todo, você sempre<br>terá algo novo para jogar.</p>
+  
+      <a 
+        href="https://www.xbox.com/pt-br/xbox-game-pass/pc-games?icid=mscom_marcom">
+        <span>Compre agora</span> <i class="fas fa-chevron-right"></i>
+      </a>
+    </div>
+  </section>
+
+  <h1 class="title">Para o trabalho</h1>
+
+  <section class="cards">
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4rvYV?ver=b9c8&q=90&m=
+      6&h=201&w=358&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Game Pass">
+      <h3>Microsoft 365 para negócios</h3>
+      <p>O Microsoft 365 para negócios fornece serviços avançados que ajudam você a administrar e expandir seus negócios.
+      </p>
+      <a href="">Compre <i class="fas fa-chevron-right"></i></a>
+    </div>
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4rzs9?ver=5f61&q=90&m
+      =6&h=201&w=358&b=%23FFFFFFFF&l=f&o=t&x=329&y=155&aim=true" alt="Xbox One S">
+      <h3>Crie uma sala de aula online</h3>
+      <p>Veja as dicas dos especialistas sobre como usar o Microsoft Teams, gratuito para educadores e alunos, para
+        criar tarefas, colaborar virtualmente e muito mais.
+      </p>
+      <a href="">Saiba mais <i class="fas fa-chevron-right"></i></a>
+    </div>
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE4vkSt?ver=7fe
+      0&q=90&m=6&h=201&w=358&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Microsoft Edge">
+      <h3>Soluções para os desafios atuais</h3>
+      <p>Saiba como manter a continuidade dos seus negócios com correções práticas e acessíveis.
+      </p>
+      <a href="">Saiba mais <i class="fas fa-chevron-right"></i></a>
+    </div>
+    <div>
+      <img src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE3sKm8?ver=08
+      d4&q=90&m=6&h=201&w=358&b=%23FFFFFFFF&l=f&o=t&aim=true" alt="Windows 10">
+      <h3>Explore o Kubernetes</h3>
+      <p>Saiba como o Kubernetes funciona e comece hoje mesmo a desenvolver aplicativos nativos na nuvem.
+      </p>
+      <a href="">Começe já <i class="fas fa-chevron-right"></i></a>
+    </div>
+  </section>
+
+  <section class="footer-links">
+    <div>
+      <h4>Novidades</h4>
+
+      <a href="">Microsoft 365</a>
+      <a href="">Aplicativos do Windows 10</a>
+    </div>
+    <div>
+      <h4>Microsoft Store</h4>
+
+      <a href="">Perfil da conta</a>
+      <a href="">Centro de Download</a>
+      <a href="">Suporte da Microsoft Store</a>
+      <a href="">Devoluções</a>
+      <a href="">Acompanhamento de pedidos</a>
+    </div>
+    <div>
+      <h4>Educação</h4>
+
+      <a href="">Microsoft na educação</a>
+      <a href="">Office para estudantes</a>
+      <a href="">Office 365 para escolas</a>
+      <a href="">Microsoft Azure na Educação</a>
+    </div>
+    <div>
+      <h4>Empresa</h4>
+
+      <a href="">Azure</a>
+      <a href="">AppSource</a>
+      <a href="">Automotivo</a>
+      <a href="">Governo</a>
+      <a href="">Saúde</a>
+      <a href="">Manufatura</a>
+      <a href="">Serviços financeiros</a>
+      <a href="">Varejo</a>
+    </div>
+    <div>
+      <h4>Desenvolvedor</h4>
+
+      <a href="">Microsoft Visual Studio</a>
+      <a href="">Centro de Desenvolvimento do Windows</a>
+      <a href="">Rede de Desenvolvedores</a>
+      <a href="">TechNet</a>
+      <a href="">Programa de desenvolvedores da Microsoft</a>
+      <a href="">Channel 9</a>
+      <a href="">Centro de Desenvolvimento do Office</a>
+    </div>
+    <div>
+      <h4>Empresa</h4>
+
+      <a href="">Carreiras</a>
+      <a href="">Sobre a Microsoft</a>
+      <a href="">Notícias da empresa</a>
+      <a href="">Privacidade na Microsoft</a>
+      <a href="">Investidores</a>
+      <a href="">Diversidade e inclusão</a>
+      <a href="">Segurança</a>
+    </div>
+  </section>
+
+  <footer class="footer-links">
     <a href=""><i class="fas fa-globe-americas"></i>Português (Brasil)</a>
     <a href="">Entre em contato com a Microsoft</a>
     <a href="">Política de Privacidade</a>
