Added social media links

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel='icon' type='image/x-icon' href='favicon.ico' />
+
   <link rel="stylesheet" href="styles.css" type="text/css">
   <script src="https://kit.fontawesome.com/c4efcb5b8c.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="scripts.js"></script>
@@ -193,6 +195,14 @@
       <a href="">Começe já <i class="fas fa-chevron-right"></i></a>
     </div>
   </section>
+
+  <div class="social-media-links">
+    <span>Siga Microsoft</span>
+    <a href=""><img src="https://www.microsoft.com/onerfstatics/marketingsites-eus-prod/_h/2532198d/coreui.statics/images/social/facebook.svg" alt="Facebook"></a>
+    <a href=""><img src="https://www.microsoft.com/onerfstatics/marketingsites-eus-prod/_h/6f40299c/coreui.statics/images/social/twitter.svg" alt="Twitter"></a>
+    <a href=""><img src="https://www.microsoft.com/onerfstatics/marketingsites-eus-prod/_h/2d505657/coreui.statics/images/social/youtube.svg" alt="Youtube"></a>
+    <a href=""><img src="https://www.microsoft.com/onerfstatics/marketingsites-eus-prod/_h/859513b5/coreui.statics/images/social/instagram.svg" alt="instagram"></a>
+  </div>
 
   <section class="footer-links">
     <div>
